feat(!gateway-service + common-service): setup common-service